--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,9 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# H2Dialect는 자동 감지되므로 명시할 필요 없음
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.open-in-view=false
 
 # 초기 데이터 로드
 spring.sql.init.mode=always
