--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,5 @@
 # 테스트용 설정
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
@@ -8,6 +7,9 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# 초기 데이터 로드 비활성화 (테스트에서는 불필요)
+spring.sql.init.mode=never
 
 # H2 콘솔 (선택사항)
 spring.h2.console.enabled=true
